--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,10 @@ jobs:
             flags: -Z codegen-backend=cranelift
           - rust: nightly
             # target: x86_64-apple-darwin
-            os: macos-13
+            os: macos-13 # x86_64
           - rust: nightly
             target: aarch64-apple-darwin
-            os: macos-14
+            os: macos-14 # AArch64
           - rust: '1.59'
             target: aarch64-unknown-linux-gnu
           - rust: stable
