--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,7 +20,7 @@ aarch64_linux_test_task:
   setup_script:
     - set -CeEuxo pipefail
     - lscpu
-    - rustup toolchain add nightly-2024-07-31 --no-self-update && rustup default nightly-2024-07-31
+    - rustup toolchain add nightly --no-self-update && rustup default nightly
     # - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends moreutils
   test_script:
     - set -CeEuxo pipefail
