--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,12 +72,12 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: stable
             target: aarch64-unknown-linux-gnu
-          - rust: nightly-2024-07-31 # LLVM 19 bug: https://github.com/rust-lang/rust/issues/129585
+          - rust: nightly
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64-unknown-linux-gnu
             flags: -Z codegen-backend=cranelift
-          - rust: nightly-2024-07-31 # LLVM 19 bug: https://github.com/rust-lang/rust/issues/129585
+          - rust: nightly
             target: aarch64_be-unknown-linux-gnu
           - rust: nightly-2021-12-16 # Rust 1.59, LLVM 13 (oldest version we can use stable asm on this target)
             target: aarch64_be-unknown-linux-gnu
@@ -183,7 +183,7 @@ jobs:
             target: riscv64gc-unknown-linux-gnu
           - rust: stable
             target: riscv64gc-unknown-linux-gnu
-          - rust: nightly-2024-07-31 # LLVM 19 bug: https://github.com/rust-lang/rust/issues/129585
+          - rust: nightly
             target: riscv64gc-unknown-linux-gnu
           # TODO: cranelift doesn't support cfg(target_feature): https://github.com/rust-lang/rustc_codegen_cranelift/issues/1400
           # - rust: nightly
