--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -380,9 +380,11 @@ jobs:
             "$@"
           }
           retry sudo apt-get -o Acquire::Retries=10 -qq update
+          # TODO: only install AVR/MSP430-specific packages for nightly toolchains
           retry sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends \
             avr-libc \
             gcc-avr \
+            mspdebug \
             qemu-system-arm \
             qemu-system-misc \
             simavr
@@ -393,6 +395,10 @@ jobs:
           sudo mv -- "opensbi-${OPENSBI_VERSION}-rv-bin/share/opensbi/ilp32/generic/firmware/fw_dynamic.bin" /usr/share/qemu/opensbi-riscv32-generic-fw_dynamic.bin
           sudo mv -- "opensbi-${OPENSBI_VERSION}-rv-bin/share/opensbi/ilp32/generic/firmware/fw_dynamic.elf" /usr/share/qemu/opensbi-riscv32-generic-fw_dynamic.elf
           rm -rf -- "opensbi-${OPENSBI_VERSION}-rv-bin"
+          mkdir -p -- "${HOME}"/msp430-gcc
+          retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://dr-download.ti.com/software-development/ide-configuration-compiler-or-debugger/MD-LlCjWuAbzH/9.3.1.2/msp430-gcc-9.3.1.11_linux64.tar.bz2 \
+            | tar xjf - --strip-components 1 -C "${HOME}"/msp430-gcc
+          printf '%s\n' "${HOME}"/msp430-gcc/bin >>"${GITHUB_PATH}"
       - uses: taiki-e/github-actions/install-rust@main
         with:
           toolchain: ${{ matrix.rust }}
