--- a/target-specs/riscv64i-unknown-none-elf.json
+++ b/target-specs/riscv64i-unknown-none-elf.json
@@ -8,6 +8,7 @@
   "emit-debug-gdb-scripts": false,
   "linker": "rust-lld",
   "linker-flavor": "ld.lld",
+  "llvm-abiname": "lp64",
   "llvm-target": "riscv64",
   "max-atomic-width": 0,
   "panic-strategy": "abort",
