--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -19,9 +19,20 @@ aarch64_linux_test_task:
     image: rust
   setup_script:
     - set -CeEuxo pipefail
+    - |
+      retry() {
+        for i in {1..10}; do
+          if "$@"; then
+            return 0
+          else
+            sleep "${i}"
+          fi
+        done
+        "$@"
+      }
     - lscpu
-    - rustup toolchain add nightly --no-self-update && rustup default nightly
-    # - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends moreutils
+    - retry rustup toolchain add nightly --no-self-update && rustup default nightly
+    # - retry apt-get -o Acquire::Retries=10 -qq update && retry apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends moreutils
   test_script:
     - set -CeEuxo pipefail
     - ./tools/test.sh -vv
@@ -41,8 +52,19 @@ aarch64_linux_valgrind_task:
     image: rust
   setup_script:
     - set -CeEuxo pipefail
-    - rustup toolchain add nightly --no-self-update && rustup default nightly
-    - apt-get -o Acquire::Retries=10 -qq update && apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends valgrind # moreutils
+    - |
+      retry() {
+        for i in {1..10}; do
+          if "$@"; then
+            return 0
+          else
+            sleep "${i}"
+          fi
+        done
+        "$@"
+      }
+    - retry rustup toolchain add nightly --no-self-update && rustup default nightly
+    - retry apt-get -o Acquire::Retries=10 -qq update && retry apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends valgrind # moreutils
   test_script:
     - set -CeEuxo pipefail
     - ./tools/test.sh valgrind -vv
