--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,9 @@ updates:
       - /
       # crates with [workspace] table are not recognized by the above 'directory: /'
       - /tests/avr
+      - /tests/msp430
       - /tests/no-std-qemu
+      - /tests/xtensa
     schedule:
       interval: daily
     commit-message:
