--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -374,6 +374,10 @@ jobs:
       - uses: taiki-e/github-actions/install-rust@main
         with:
           toolchain: ${{ matrix.rust }}
+      - uses: taiki-e/install-action@cargo-hack
+        if: startsWith(matrix.rust, 'nightly')
+      - uses: taiki-e/install-action@espup
+        if: startsWith(matrix.rust, 'nightly')
       - run: |
           retry() {
             for i in {1..10}; do
@@ -411,10 +415,17 @@ jobs:
             retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://dr-download.ti.com/software-development/ide-configuration-compiler-or-debugger/MD-LlCjWuAbzH/9.3.1.2/msp430-gcc-9.3.1.11_linux64.tar.bz2 \
               | tar xjf - --strip-components 1 -C "${HOME}"/msp430-gcc
             printf '%s\n' "${HOME}"/msp430-gcc/bin >>"${GITHUB_PATH}"
+            retry espup install --targets esp32,esp32s2,esp32s3
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: rm -- tests/avr/rust-toolchain.toml
         if: startsWith(matrix.rust, 'nightly-')
       - run: tools/no-std.sh
+      - run: tools/build.sh +esp xtensa-esp32-none-elf xtensa-esp32s2-none-elf xtensa-esp32s3-none-elf
+        if: startsWith(matrix.rust, 'nightly')
+      - run: tools/no-std.sh +esp xtensa-esp32-none-elf xtensa-esp32s2-none-elf xtensa-esp32s3-none-elf
+        if: startsWith(matrix.rust, 'nightly')
 
   valgrind:
     needs: tidy
