Support SPARC and SPARC64 (experimental)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -234,6 +234,10 @@ jobs:
             target: s390x-unknown-linux-gnu
           - rust: nightly
             target: s390x-unknown-linux-gnu
+          - rust: nightly-2024-11-08 # Rust 1.84, LLVM 19 (oldest version we can use asm_experimental_arch on this target)
+            target: sparc64-unknown-linux-gnu
+          - rust: nightly
+            target: sparc64-unknown-linux-gnu
           - rust: '1.59' # LLVM 13
             target: thumbv7neon-unknown-linux-gnueabihf
           - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
@@ -433,6 +437,7 @@ jobs:
             apt_packages+=(
               avr-libc
               gcc-avr
+              libnspr4
               mspdebug
               simavr
             )
@@ -447,10 +452,16 @@ jobs:
           sudo mv -- "opensbi-${OPENSBI_VERSION}-rv-bin/share/opensbi/ilp32/generic/firmware/fw_dynamic.elf" /usr/share/qemu/opensbi-riscv32-generic-fw_dynamic.elf
           rm -rf -- "opensbi-${OPENSBI_VERSION}-rv-bin"
           if [[ "${{ matrix.rust }}" == "nightly"* ]]; then
-            mkdir -p -- "${HOME}"/msp430-gcc
+            mkdir -p -- "${HOME}"/{msp430-gcc,sparc-bcc-gcc,tsim}
             retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://dr-download.ti.com/software-development/ide-configuration-compiler-or-debugger/MD-LlCjWuAbzH/9.3.1.2/msp430-gcc-9.3.1.11_linux64.tar.bz2 \
               | tar xjf - --strip-components 1 -C "${HOME}"/msp430-gcc
             printf '%s\n' "${HOME}"/msp430-gcc/bin >>"${GITHUB_PATH}"
+            retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://www.gaisler.com/anonftp/bcc2/bin/bcc-2.3.1-gcc-sparc-linux64.tar.xz \
+              | tar xJf - --strip-components 1 -C "${HOME}"/sparc-bcc-gcc
+            printf '%s\n' "${HOME}"/sparc-bcc-gcc/bin >>"${GITHUB_PATH}"
+            retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://www.gaisler.com/tsim3/tsim-eval/tsim-eval-3.1.11.tar.gz \
+              | tar xzf - --strip-components 1 -C "${HOME}"/tsim
+            printf '%s\n' "${HOME}"/tsim/tsim/linux-x64 >>"${GITHUB_PATH}"
             retry espup install --targets esp32,esp32s2,esp32s3
           fi
         env:
